--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="container my-3">
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <h1 class="text-align-center">Simple Chess AI</h1>
+                        <h1 class="text-align-center">Chess by Alexander</h1>
                         <div class="row justify-content-center">
                             <span id="position-count">0</span> &nbsp positions evaluated in &nbsp <span id="time">0</span>s.
                         </div>
@@ -197,7 +197,7 @@
         </main>
         <footer>
             <p class="text-align-center"> Copyright &copy 2020 
-                <a href="https://github.com/zeyu2001/chess-ai">Zhang Zeyu</a> 
+                <a href="https://github.com/zeyu2001/chess-ai">Alexander Witteborg</a> 
             </p>
         </footer>
     </body>
